--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <title>James' Python Tutorials</title>
+  </head>
   <body>
     <hi>WELCOME TO MY PYTHON TUTORIAL!</hi>
     <p>website under construction.</p>
