--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>James' Python Tutorials</title>
+    <title style="font: impact;">James' Python Tutorials</title>
   </head>
-  <body>
+  <body style="background-color: red; font-face: sans-serif; font-color: black;">
     <hi>WELCOME TO MY PYTHON TUTORIAL!</hi>
     <p>website under construction.</p>
   </body>
