--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title style="font: impact;">James' Python Tutorials</title>
   </head>
   <body style="background-color: red; font-face: sans-serif; font-color: black;">
     <hi>WELCOME TO MY PYTHON TUTORIAL!</hi>
-    <p>website under construction.</p>
+    <br>
+    <p>
+      This website is aimed to teach you the ways of the python programming language.<br>
+      <br>
+      WHAT WE WILL COVER:<br>
+      - printing<br>
+      - variables<br>
+      - datatypes<br>
+      - functions<br>
+      - classes<br>
+      - if, elif and else<br>
+      AND MORE!
+    </p>
   </body>
 </html>
