--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <head>
     <title style="font: impact;">James' Python Tutorials</title>
   </head>
-  <body style="background-color: red; font-face: sans-serif; font-color: black;">
+  <body style="font-face: sans-serif; font-color: black;">
     <hi>WELCOME TO MY PYTHON TUTORIAL!</hi>
     <br>
-    <p>
+    <p style="background-color: pink; border-style: dashed; border-radius: 20px;">
       This website is aimed to teach you the ways of the python programming language.<br>
       <br>
       WHAT WE WILL COVER:<br>
