--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body style="font-face: sans-serif; font-color: black;">
     <hi>WELCOME TO MY PYTHON TUTORIAL!</hi>
     <br>
-    <p style="background-color: pink; border-style: dashed; border-radius: 20px;">
+    <p style="background-color: pink; border-style: dashed; border-radius: 10px;width: 50px;">
       This website is aimed to teach you the ways of the python programming language.<br>
       <br>
       WHAT WE WILL COVER:<br>
