--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-    <title style="font: impact;">James' Python Tutorials</title>
+    <title>James' Python Tutorials</title>
   </head>
-  <body style="font-face: sans-serif; font-color: black;">
-    <hi>WELCOME TO MY PYTHON TUTORIAL!</hi>
+  <body style="font-face: sans-serif; color: black; background-color: #1e1e1e;">
+    <h1 style="color: white; font-size: 30px;">WELCOME TO MY PYTHON TUTORIAL!</h1>
     <br>
-    <p style="background-color: pink; border-style: dashed; border-radius: 10px;width: 50px;">
+    <p style="background-color: pink; border-style: dashed; border-radius: 10px;width: 600px;">
       This website is aimed to teach you the ways of the python programming language.<br>
       <br>
       WHAT WE WILL COVER:<br>
@@ -16,6 +16,14 @@
       - classes<br>
       - if, elif and else<br>
       AND MORE!
+    </p>
+    <p style="background-color: yellow; border-style: solid; border-radius: 10px; width: 600px;">
+        COURSES:<br>
+        <br>
+        <a href="setup-python.html">SETUP OF PYTHON</a><br>
+        <br>
+        <a href="printing-lesson.html">PRINTING IN PYTHON LESSON</a><br>
+        <br>
     </p>
   </body>
 </html>
